|
Quick Lists
|
|
Bug ID:
|
6892749
|
|
Votes
|
0
|
|
Synopsis
|
assert(UseParNewGC || UseSerialGC || UseConcMarkSweepGC, "...") fails
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs17(b04),
6u18(b04) (Bug ID:2184105)
, hs16(b11) (Bug ID:2184106)
, 7(b75) (Bug ID:2184803)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6888898
|
|
Submit Date
|
18-OCT-2009
|
|
Description
|
Lots of tests are failing due to this assert:
[2009-10-18T06:38:28.12] # Actual: /export/local/common/jdk/baseline/solaris-sparcv9/bin/java -d64 -server -Xmixed -XX:DefaultMaxRAMFraction=8 -XX:-UseCompressedOops -XX:-PrintVMOptions nsk.regression.b4242912.b4242912
[2009-10-18T06:38:28.12] # To suppress the following error report, specify this argument
[2009-10-18T06:38:47.20] # after -XX: or in .hotspotrc: SuppressErrorAt=/genCollectedHeap.hpp:270
[2009-10-18T06:38:47.20] #
[2009-10-18T06:38:47.20] # A fatal error has been detected by the Java Runtime Environment:
[2009-10-18T06:38:47.20] #
[2009-10-18T06:38:47.20] # Internal Error (/tmp/jprt/P1/B/090751.ysr/source/src/share/vm/memory/genCollectedHeap.hpp:270), pid=60, tid=2
[2009-10-18T06:38:47.20] # Error: assert(UseParNewGC || UseSerialGC || UseConcMarkSweepGC,"Check can_elide_initializing_store_barrier() for this collector")
[2009-10-18T06:38:47.20] #
[2009-10-18T06:38:47.20] # JRE version: 7.0-b73
[2009-10-18T06:38:47.20] # Java VM: OpenJDK 64-Bit Server VM (17.0-b01-2009-10-16-090751.ysr.cardmarks-fastdebug mixed mode solaris-sparc )
[2009-10-18T06:38:47.20] # An error report file with more information is saved as:
[2009-10-18T06:38:47.20] # /export/local/23536.JDK7.NIGHTLY.VM+solaris-sparcv9_server_mixed_nsk.quick-regression.testlist/results/ResultDir/b4242912/hs_err_pid60.log
[2009-10-18T06:38:47.20] #
[2009-10-18T06:38:47.20] # If you would like to submit a bug report, please visit:
[2009-10-18T06:38:47.20] # http://java.sun.com/webapps/bugreport/crash.jsp
[2009-10-18T06:38:47.20] #
Posted Date : 2009-10-18 23:15:58.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
It's most likely caused by 6888898.
Posted Date : 2009-10-18 23:15:58.0
The global flag UseSerialGC is not always be explcitly set when serial GC is being
used. One solution is to explicitly set it at start-up in such cases where serial
gc is used, so that assertions can easily check for the case where serial gc is
being used by testing the value of this flag.
Posted Date : 2009-10-19 16:17:31.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/052a899eec3e
Posted Date : 2009-10-20 10:52:56.0
http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/164505f3849e
Posted Date : 2009-10-22 02:15:52.0
http://hg.openjdk.java.net/hsx/hsx16/master/rev/164505f3849e
Posted Date : 2009-10-22 08:06:47.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |