6892749: assert(UseParNewGC || UseSerialGC || UseConcMarkSweepGC, "...") fails

Removed the assert: UseSerialGC is not necessarily always set when serial gc is being used.

Reviewed-by: jcoomes, jmasa, tonyp